# water-ontology

./: .gitignore  CNAME  Makefile  README.md  build.py  download-s223.sh  ontology_output.txt  ontology_to_txt.py  pyproject.toml
.github/workflows/: static.yml
docs/: README.md  _config.yml  _toc.yml  requirements.txt
docs/explanation/: data_quality.md  definitions.md  flow_graph_sensor.md  overview.md  processes.md  purpose_scope.md
docs/libraries/: index.rst
docs/reference/: equipment_documentation.md  ontology_documentation.md  substances_documentation.md
docs/tutorials/: data-quality-tutorial.md
examples/: reactor-with-recirculation.ttl  reactor-with-required-cps.ttl
examples/nonconforming/: reactor-missing-required-outlet.ttl
libraries/: 223p.ttl
libraries/nrel-223p-templates/: devices.yml  properties.yml
libraries/templates/: bidirectional-cp.rst  bladder.rst  brine.rst  check-valve.rst  conductivity.rst  connections.yml  constituent-salt.rst  constituent-water.rst  controller.rst  ph.rst  (+20 more)
models/: utils.py
notebooks/: ModelBuilder.ipynb  Tutorial1.ipynb  data-quality-tutorial.ipynb  data-quality.md
scripts/: README.md  compile-water-ontology.py  ontology_output.txt  ontology_to_txt.py  show-medium-hierarchy.py  ttl-to-md.py  utils.py  validation.py
tests/: conftest.py  test_examples.py  test_nonconforming_examples.py  test_validation.py
visualization/: ct_model_vis.py  ontology_vis.py  rdf2html_classification.py  template_model_vis.py
water/: enumerationkinds.ttl  equipment.ttl  notes.md  ontology.ttl  processtypes.ttl  substances.ttl
(+113 files in other folders)
